tests/baselines/reference/trailingCommasInGetter.errors.txt
trailingCommasInGetter.ts(2,11): error TS1138: Parameter declaration expected.


==== trailingCommasInGetter.ts (1 errors) ====
    class X {
        get x(,) { return 0; }
              ~
!!! error TS1138: Parameter declaration expected.
    }
    